[package]
name = "herpooles"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"
console_error_panic_hook = { version = "0.1.7", optional = true }
approx = "0.5.1"
rand = {version = "0.8.5", features = ["std", "std_rng"]}
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.65"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'EventTarget',
  'MouseEvent',
  'console',
  'HtmlImageElement',
  'KeyboardEvent',
  'Location',
  'HtmlInputElement',
  'HtmlAudioElement',
]
